--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -22,3 +22,11 @@ return array(
     //'cache_dir' =>  './data/cache',
     // ...
 );
+
+<?php
+return array(
+    'db' => array(
+        'username' => 'mevan',
+        'password' => 'Password100',
+    ),
+);
